--- a/gallery.css
+++ b/gallery.css
@@ -369,4 +369,9 @@
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
     background-size: 60% 60%;
+}
+
+.carousel-title-centered {
+    text-align: center;
+    color: #4285F4;
 } 
